src/test/testcases/errors/P2/public/subaddmul03.mavl
function void main(){
    val vector<int>[3] a = [3, 3, 3];
    val matrix<int>[3][1] b = [[1],
                               [1],
                               [1]];
   // Structure dimension error
    val matrix<int>[3][1] x = a - b;
}
